--- a/.env
+++ b/.env
@@ -1,10 +1,6 @@
 PORT=3000
 
 EMAIL_USER=info@sugarlean.com.au
-<<<<<<< HEAD
-EMAIL_PASS=dhnlqrlrhjqdnsym
-=======
-EMAIL_PASS=yknzkrpvxrmtlpny
->>>>>>> 1dbe1e6 (Initial commit with updated styled email)
+EMAIL_PASS=yknzkrpvxrmtlpny   # ← or use the other one if it's correct
 EMAIL_HOST=smtp.office365.com
 EMAIL_PORT=587
