Update sendOrderEmail.js and .env

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
 
 EMAIL_USER=info@sugarlean.com.au
-EMAIL_PASS=yknzkrpvxrmtlpny   # ← or use the other one if it's correct
+EMAIL_PASS=yknzkrpvxrmtlpny
 EMAIL_HOST=smtp.office365.com
 EMAIL_PORT=587
